added prompts & fixed social media links

--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-image: linear-gradient(rgb(69, 69, 250), white);
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
 header {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
   color: navy;
 }
 .circDown {
@@ -696,6 +696,17 @@ td:hover {
   color: black;
 }
 
+#disclaimer-p {
+  color: black;
+}
+
+#color-click {
+  color: navy;
+  font-size: 0.35em;
+  margin-top: -2em;
+  font-weight: bold;
+}
+
 @keyframes pulse {
   0% {
     transform: scale(1, 1);
@@ -829,11 +840,9 @@ td:hover {
     margin-left: 0.5em;
   }
   .days_big {
-    width:5.5em;
+    width: 5.5em;
     height: auto;
   }
-  
-  
 }
 
 @media only screen and (max-width: 768px) {
@@ -976,108 +985,103 @@ td:hover {
     display: block;
     margin-left: -15em;
     width: 50%;
-   
-  }
-  
-
-@media only screen and (min-width: 375px) {
-  .days {
-    width: 0.2em;
-    height: auto;
   }
 
-  .days_big {
-    width: 0.2em;
-    height: auto;
-  }
+  @media only screen and (min-width: 375px) {
+    .days {
+      width: 0.2em;
+      height: auto;
+    }
 
-  .days_big span {
-    position: relative;
-    margin: auto;
-  }
-  /*.calender-container {
+    .days_big {
+      width: 0.2em;
+      height: auto;
+    }
+
+    .days_big span {
+      position: relative;
+      margin: auto;
+    }
+    /*.calender-container {
     width: 375px;
     height: auto;
   }*/
 
-  .calender-container {
-    width: 101%;
+    .calender-container {
+      width: 101%;
+    }
+
+    .big-calender-container {
+      width: 95%;
+    }
+
+    .user-key {
+      margin-left: 3.75em;
+    }
+
+    #noearlier {
+      margin: 0.25px;
+      width: 40%;
+    }
+
+    #nolater {
+      margin: 0.25px 0 1px 0;
+      width: 40%;
+    }
+
+    #big-back {
+      height: 600px;
+    }
+    #Eventname {
+      justify-content: left;
+      display: block;
+      margin-left: -8em;
+      width: 50%;
+    }
+    #Eventbtn {
+      justify-content: left;
+      display: block;
+      margin-left: -15em;
+      width: 50%;
+    }
   }
 
-  .big-calender-container {
-    width: 95%;
-  }
+  @media only screen and (max-width: 360px) {
+    .days {
+      width: 0.75em;
+      height: 1em;
+    }
 
-  .user-key {
-    margin-left: 3.75em;
-  }
+    .days_big {
+      width: 0.75em;
+      height: 1em;
+    }
 
-  #noearlier {
-    margin: 0.25px;
-    width: 40%;
-  }
+    .user-key {
+      margin-left: 3.75em;
+    }
 
-  #nolater {
-    margin: 0.25px 0 1px 0;
-    width: 40%;
-  }
+    .big-months select {
+      width: 38%;
+    }
 
-  #big-back {
-    height: 600px;
-  }
-  #Eventname {
-    justify-content: left;
-    display: block;
-    margin-left: -8em;
-    width: 50%;
-  }
-  #Eventbtn {
-    justify-content: left;
-    display: block;
-    margin-left: -15em;
-    width: 50%;
-  
-  }
- 
-  
-}
+    #noearlier {
+      margin: 0.25px;
+      width: 40%;
+    }
 
-@media only screen and (max-width: 360px) {
-  .days {
-    width: 0.75em;
-    height: 1em;
-  }
+    #nolater {
+      margin: 0.25px 0 1px 0;
+      width: 40%;
+    }
 
-  .days_big {
-    width: 0.75em;
-    height: 1em;
+    #big-back {
+      height: 600px;
+    }
+    .icon-bar {
+      position: absolute;
+      top: 12%;
+      right: 2%;
+    }
   }
-
-  .user-key {
-    margin-left: 3.75em;
-  }
-
-  .big-months select {
-    width: 38%;
-  }
-
-  #noearlier {
-    margin: 0.25px;
-    width: 40%;
-  }
-
-  #nolater {
-    margin: 0.25px 0 1px 0;
-    width: 40%;
-  }
-
-  #big-back {
-    height: 600px;
-  }
-  .icon-bar {
-    position: absolute;
-    top: 12%;
-    right: 2%;
-  }
-}
 }
